FIx Mobile view

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -22,7 +22,7 @@
             <div id="userProfile" class="user-profile hidden">
                 <div class="profile-dropdown">
                     <div class="profile-trigger">
-                        <img id="userImg" src="" alt="Profile">
+                        <img id="userImg" src="" alt="pic">
                         <span id="userName"></span>
                     </div>
                     <div class="dropdown-menu">
