--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <!-- Navbar esistente -->
     <nav class="navbar">
         <div class="nav-brand">
             <i class="fas fa-leaf"></i>
@@ -35,8 +35,131 @@
             </div>
         </div>
     </nav>
-    
+
+    <!-- Main Content -->
+    <div class="container">
+        <!-- Habits Section -->
+        <div class="section">
+            <div class="section-header">
+                <h2 class="section-title">Habits</h2>
+                <button class="add-btn" id="addHabitBtn">+</button>
+            </div>
+            <div class="habit-list" id="habitsList">
+                <!-- Habits will be dynamically added here -->
+            </div>
+        </div>
+
+        <!-- Hobbies Section -->
+        <div class="section" id="hobbiesSection">
+            <div class="section-header">
+                <h2 class="section-title">Hobbies</h2>
+            </div>
+            <div class="habit-list" id="hobbiesList">
+                <!-- Hobbies will be dynamically added here -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Add Habit Modal -->
+    <div class="modal" id="addHabitModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Add New Habit</h3>
+                <button class="close-btn" id="closeModal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <!-- Habit Name Input -->
+                <div class="form-group">
+                    <label for="habitName">Habit Name</label>
+                    <input type="text" id="habitName" placeholder="Enter habit name">
+                </div>
+
+                <!-- Week Days Selection -->
+                <div class="form-group">
+                    <label>Repeat on</label>
+                    <div class="weekdays" id="weekDays">
+                        <button class="day-btn active" data-day="0">S</button>
+                        <button class="day-btn active" data-day="1">M</button>
+                        <button class="day-btn active" data-day="2">T</button>
+                        <button class="day-btn active" data-day="3">W</button>
+                        <button class="day-btn active" data-day="4">T</button>
+                        <button class="day-btn active" data-day="5">F</button>
+                        <button class="day-btn active" data-day="6">S</button>
+                    </div>
+                </div>
+
+                <!-- Description Input -->
+                <div class="form-group">
+                    <label for="habitDesc">Description (MD)</label>
+                    <textarea id="habitDesc" rows="4" placeholder="Write your description in markdown..."></textarea>
+                </div>
+
+                <!-- Hobby Toggle -->
+                <div class="form-group">
+                    <label class="toggle-label">
+                        <span>Is this a hobby?</span>
+                        <div class="toggle-wrapper">
+                            <input type="checkbox" id="isHobby">
+                            <span class="toggle-slider"></span>
+                        </div>
+                    </label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="cancel-btn" id="cancelHabit">Cancel</button>
+                <button class="save-btn" id="saveHabit">Save Habit</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Habit Details Modal -->
+<div class="modal" id="habitDetailsModal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h3 id="habitDetailTitle"></h3>
+            <button class="close-btn" id="closeDetailsModal">&times;</button>
+        </div>
+        <div class="modal-body">
+            <!-- View Mode -->
+            <div id="viewMode">
+                <div class="markdown-content" id="habitDescription"></div>
+            </div>
+
+            <!-- Edit Mode -->
+            <div id="editMode" class="hidden">
+                <!-- Week Days Selection -->
+                <div class="form-group">
+                    <label>Schedule</label>
+                    <div class="weekdays" id="editWeekDays">
+                        <button class="day-btn" data-day="0">S</button>
+                        <button class="day-btn" data-day="1">M</button>
+                        <button class="day-btn" data-day="2">T</button>
+                        <button class="day-btn" data-day="3">W</button>
+                        <button class="day-btn" data-day="4">T</button>
+                        <button class="day-btn" data-day="5">F</button>
+                        <button class="day-btn" data-day="6">S</button>
+                    </div>
+                </div>
+                
+                <!-- Description Input -->
+                <div class="form-group">
+                    <label for="editDescription">Description (MD)</label>
+                    <textarea id="editDescription" rows="6"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div class="modal-actions">
+                <button class="btn-subtle" id="deleteHabitBtn">Delete</button>
+                <button class="btn-primary" id="editHabitBtn">Edit</button>
+                <button class="btn-primary hidden" id="saveEditBtn">Save Changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <script src="rsc/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 </html>
