--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,6 +112,28 @@
         </div>
     </div>
 
+<!-- Schermata introduttiva -->
+<div id="introSection" class="intro hidden">
+    <div class="intro-content">
+        <h2 class="intro-title">Benvenuto su Habit Tracker</h2>
+        <p class="intro-description">
+            Organizza le tue abitudini e raggiungi i tuoi obiettivi! Effettua l'accesso per iniziare, oppure esplora un'anteprima qui sotto.
+        </p>
+        <img
+            src="rsc/images/habit-tracker-preview.png"
+            alt="Anteprima Habit Tracker"
+            class="intro-screenshot"
+        />
+        <a
+            href="https://github.com/tuo-repo/habit-tracker"
+            class="intro-link"
+            target="_blank"
+        >
+            <i class="fab fa-github"></i> Visita il Progetto su GitHub
+        </a>
+    </div>
+</div>
+
     <!-- Habit Details Modal -->
 <div class="modal" id="habitDetailsModal">
     <div class="modal-content">
