--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Habit Tracker</title>
+    <title>Sprout Tracker</title>
     <link rel="stylesheet" href="rsc/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="rsc/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Navbar esistente -->
     <nav class="navbar">
         <div class="nav-brand">
             <i class="fas fa-leaf"></i>
-            <span>Habit Tracker</span>
+            <span>Sprout Tracker</span>
         </div>
         <div class="nav-auth">
             <button id="loginBtn" class="login-btn">
@@ -37,7 +38,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container">
+    <div class="container hidden" id="mainContent">
         <!-- Habits Section -->
         <div class="section">
             <div class="section-header">
@@ -48,7 +49,7 @@
                 <!-- Habits will be dynamically added here -->
             </div>
         </div>
-
+    
         <!-- Hobbies Section -->
         <div class="section" id="hobbiesSection">
             <div class="section-header">
@@ -115,7 +116,7 @@
 <!-- Schermata introduttiva -->
 <div id="introSection" class="intro hidden">
     <div class="intro-content">
-        <h2 class="intro-title">Benvenuto su Habit Tracker</h2>
+        <h2 class="intro-title">Benvenuto su Sprout Tracker</h2>
         <p class="intro-description">
             Organizza le tue abitudini e raggiungi i tuoi obiettivi! Effettua l'accesso per iniziare, oppure esplora un'anteprima qui sotto.
         </p>
