--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,9 +116,9 @@
 <!-- Schermata introduttiva -->
 <div id="introSection" class="intro hidden">
     <div class="intro-content">
-        <h2 class="intro-title">Benvenuto su Sprout Tracker</h2>
+        <h2 class="intro-title">Log in to start!</h2>
         <p class="intro-description">
-            Organizza le tue abitudini e raggiungi i tuoi obiettivi! Effettua l'accesso per iniziare, oppure esplora un'anteprima qui sotto.
+            Simple minimal habit tracker.
         </p>
         <img
             src="rsc/images/habit-tracker-preview.png"
