--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <link rel="icon" href="rsc/images/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="rsc/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
